Added tests arbo + sonar cleaning